--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <body>
 	
 	<header class="main-header grid">
-		<div class="header-content"><h1 class="animated jackInTheBox">Разблокировка iPhone <br>от <span>2500</span> рублей!</h1>
-			<input type="text" name="imei" placeholder="&emsp;Введите IMEI" class="animated lightSpeedIn"><br><br>
-			<a href="#" class="button animated fadeInUp">Разблокировать</a>
+		<div class="header-content"><h1>Разблокировка iPhone <br>от <span>2500</span> рублей!</h1>
+			<input type="text" name="imei" placeholder="Введите IMEI"><br><br>
+			<a href="#" class="button">Разблокировать</a>
 		</div>
 	</header>
+
+	
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
